# Proyecto_Biomecanica

./: .gitignore  Performance Reconstrucion.txt  README.md  fir.c
Andrei/: PruebaAndrei.c
Blender/: InfoCamBlender.m  Instructivo_Base_Datos  acoplar_modelo.py  import_bvh.py  nueva_secuencia.sh  obtener_InfoCam.py  obtener_datos.py  parche_info_blender.py  render.py  tree_Blender.txt
Documentacion/: Documentacion Tracking - Medida Performance.docx  Makefile  agradecimientos.aux  agradecimientos.tex  apendice_bibliografia.tex  apendice_manual_de_usuario.tex  apendice_performance.tex  base_de_datos.tex  calibracion.tex  conclusiones.tex  definitions.tex  discusion.tex  documentacion.aux  documentacion.bbl  documentacion.bib  documentacion.blg  documentacion.lof  documentacion.lot  documentacion.out  documentacion.tex  documentacion.toc  documentacion_v0.aux  documentacion_v0.out  documentacion_v0.toc  fltpage.sty  gui.tex  iietesis.cls  introduccion.tex  justificacionalgoritmo.tex  performance_errores.tex  quotes.aux  reconstruccion.tex  referencias.bib  resumen.aux  resumen.tex  revisionbibliografica.tex  segmentacion.tex  seguimiento.tex
EJEMPLO_MAKEFILE/: Source.cpp
Gonzalo/: fir.c  fir.h
Mauricio/: fir.c  fir.h  modulo_5_pbm.c  prueba_branch_2.txt
PAIE/: compromiso_paie_2014.odt  informe_paie_2013.odt
Paper/: IEEEtran.cls  Paper.aux  Paper.tex
Paper2/: Paper - Gonzalo.txt  Paper.aux  Paper.tex  abstract.aux  abstract.tex  base_de_datos.aux  base_de_datos.tex  base_de_datos.tex.aux  calibracion.aux  calibracion.tex  calibracion.tex.aux  conclusiones.aux  conclusiones.tex  implementacion.aux  implementacion.tex  introduccion.aux  introduccion.tex  introduccion.tex.aux  performance.aux  performance.tex  reconstruccion.aux  reconstruccion.tex  reconstruccion.tex.aux  segmentacion.aux  segmentacion.tex  segmentacion.tex.aux  seguimiento.aux  seguimiento.tex  seguimiento.tex.aux
Paper3/: Paper.aux  Paper.bbl  Paper.blg  Paper.tex  abstract.aux  abstract.tex  abstract.tex.aux  base_de_datos.aux  base_de_datos.tex  calibracion.aux  calibracion.tex  conclusiones.aux  conclusiones.tex  conclusiones.tex.aux  estadoArte.tex  implementacion.aux  implementacion.tex  implementacion.tex.aux  implementacionPosta.tex  introduccion.aux  introduccion.tex  llncs.synctex  performance.aux  performance.tex  performance.tex.aux  reconstruccion.aux  reconstruccion.tex  referencias.bib  segmentacion.aux  segmentacion.tex  seguimiento.aux  seguimiento.tex
Paper_SABI/: JPCSLaTeXGuidelines.tex  Paper.tex  abstract.tex  agradecimientos.tex  apendice_A.tex  base_de_datos.tex  calibracion.tex  conclusiones.tex  estadoArte.tex  implementacion.tex  introduccion.tex  reconstruccion.tex  segmentacion.tex  seguimiento.tex
Paper_english/: Paper.tex  abstract.tex  base_de_datos.tex  biografia_Guillermo.tex  calibracion.tex  conclusiones.tex  estadoArte.tex  implementacion.tex  implementacionPosta.tex  introduccion.tex  performance.tex  reconstruccion.tex  referencias.bib  segmentacion.tex  seguimiento - full.tex  seguimiento.tex
SISTEMA/: Leanme.txt  Marcador_en_origen.bvh.txt  add_paths.m  choose_cam.m  img_angulo_cuerpo.m  img_inventario.m  main.m  (+15 more)
motion_capture/: CMakeLists.txt
motion_capture/client/: Source.cpp
motion_capture/include/: multilevelOtsu.h
motion_capture/lib/: CMakeLists.txt  ColorFilter.cpp  funcionesAuxiliares.cpp  multilevelOtsu.cpp
segmentacion/client/: CMakeLists.txt  Source.cpp
(+780 files in other folders)
